# GridLens

./: .gitignore  README.md  build.py  gridlens.spec  pyproject.toml  requirements.txt
data/: FORMAT.md
data/examples/: 11bus_radial.json  15bus_example_network.json  15bus_example_network_stressed.json  4bus_radial.json  example_network.json
docs/: SPRINT_PLAN.md
docs/infographic/: outline.md
docs/user_manual/: outline.md
src/gridlens/: __init__.py  __main__.py  _resources.py  app.py
src/gridlens/core/: __init__.py  models.py  parser.py  solver.py
src/gridlens/ui/: main_window.py
src/gridlens/ui/assets/: README.md
src/gridlens/ui/help/: user_manual.md
src/gridlens/ui/shell/: __init__.py  breadcrumb.py  footer.py  header_bar.py  sidebar.py
src/gridlens/ui/sld/: __init__.py  builder.py  items.py  layout.py
src/gridlens/ui/theme/: __init__.py  colors.py  loader.py  style.qss
src/gridlens/ui/views/: __init__.py  _base.py  about_view.py  equipment_view.py  help_view.py  home_view.py  network_view.py  reports_view.py  settings_view.py  solver_view.py
src/gridlens/ui/widgets/: __init__.py  empty_state.py  nav_button.py  numeric_field.py
src/gridlens/utils/: constants.py  validators.py
tests/: test_equipment.py  test_file_io.py  test_help.py  test_parser.py  test_reports_solver.py  test_robustness.py  test_sld.py  test_smoke.py  test_solver.py
tools/: export_source.py  make_icon.py  make_logo.py
