[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlens"
version = "0.1.0"
description = "Distribution feeder analyzer for radial three-phase balanced networks"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.3",
]

[project.scripts]
gridlens = "gridlens.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
